@@ -35,10 +35,8 @@ AffineTransform SVGImageBufferTools::absoluteTransformFromContext(GraphicsContex
     return context->getCTM() * AffineTransform().flipY();
 }
 
-bool SVGImageBufferTools::createImageBuffer(GraphicsContext* context, const AffineTransform& absoluteTransform, const FloatRect& absoluteTargetRect, OwnPtr<ImageBuffer>& imageBuffer, ImageColorSpace colorSpace)
+bool SVGImageBufferTools::createImageBuffer(const AffineTransform& absoluteTransform, const FloatRect& absoluteTargetRect, OwnPtr<ImageBuffer>& imageBuffer, ImageColorSpace colorSpace)
 {
-    ASSERT_UNUSED(context, context);
-
     IntRect imageRect = enclosingIntRect(absoluteTargetRect);
     if (imageRect.isEmpty())
         return false;
